fix
subpage text smaller tablet
content alignment phone landing doesn't overlap

--- a/ReactProject/cerasp/src/pages/_css/Subpage.css
+++ b/ReactProject/cerasp/src/pages/_css/Subpage.css
@@ -182,6 +182,15 @@
     font-size: var(--text-m);
     padding: 0 1.5em;
   }
+
+  .subpage-panel-5-text {
+    color: white;
+    padding: 120px 0.2em 0 0.2em;
+    text-align: center;
+    font-size: var(--text-s);
+    line-height: 1.3;
+    font-weight: 100;
+  }
 }
 
 @media (max-width: 768px) {
